--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "22.7.5",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.0",
+    "@uploadthing/react": "^7.0.3",
     "autoprefixer": "10.4.20",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -35,6 +36,7 @@
     "tailwindcss": "3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.6.3",
+    "uploadthing": "^7.1.0",
     "zod": "^3.23.8"
   }
 }
