--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@clerk/nextjs": "^5.7.2",
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.9.0",
+    "@mux/mux-node": "^8.8.0",
+    "@mux/mux-player-react": "^3.1.0",
     "@prisma/client": "^5.21.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
