--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
     "postcss": "8.4.47",
+    "query-string": "^9.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.0",
