--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-quill": "^2.0.0",
+    "stripe": "^17.4.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss": "3.4.13",
     "tailwindcss-animate": "^1.0.7",
